random changes to spaceball minigame random commit

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,7 @@ Network Trash Folder
 Temporary Items
 .apdisk
 /LSPatchNotes/.idea
+/SpaceBall/node_modules
+/SpaceBall/package-lock.json
+/SpaceBall/package.json
+/SpaceBall/.babelrc
