Further typescript engine update
- Added a Vector2 generic for object positions
- Added a Transform component for object position/movement handling
- Added removeComponent from gameObject for removing components
- Added Transform getting added automatically to gameObjects

--- a/tstest/.vscode/tasks.json
+++ b/tstest/.vscode/tasks.json
@@ -1,9 +1,14 @@
 {
     "version": "2.0.0",
-    "tasks": [{
-        "label": "esbuild",
-        "command": "esbuild .\\src\\scripts\\game.ts --bundle --minify --sourcemap --target='chrome58,firefox57,safari11,edge16' --outfile=game.js --watch",
-        "type": "shell",
-        "isBackground": true
-    }]
+    "tasks": [
+        {
+            "label": "esbuild",
+            "command": "esbuild .\\src\\scripts\\game.ts --bundle --minify --sourcemap --target='chrome58,firefox57,safari11,edge16' --outfile=game.js --watch",
+            "type": "shell",
+            "isBackground": true,
+            "problemMatcher": [
+                "$tsc"
+            ]
+        }
+    ]
 }
