Lots of changes
- Added a simple collision engine
- Added a custom cursor and a wall
- Added a log handler for grouping console logs
- Added a mouse handler, static object for mouse related functions
- Added events for the collision handler, uses a typedevent with the collided with gameobject in it
- Probably did some other shit a while ago, not sure what

--- a/tstest/.vscode/tasks.json
+++ b/tstest/.vscode/tasks.json
@@ -8,7 +8,11 @@
             "isBackground": true,
             "problemMatcher": [
                 "$tsc"
-            ]
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
         }
     ]
 }
