--- a/tstest/tsconfig.json
+++ b/tstest/tsconfig.json
@@ -4,7 +4,7 @@
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
         "module": "commonjs",
-        "target": "ES6",
+        "target": "ESNext",
         "outDir": "scripts",
         "rootDir": "src/scripts"
     }
