--- a/tstest/.vscode/tasks.json
+++ b/tstest/.vscode/tasks.json
@@ -1,18 +1,16 @@
 {
-    "version": "2.0.0",
-    "tasks": [
-        {
-            "label": "esbuild",
-            "command": "esbuild .\\src\\scripts\\game.ts --bundle --minify --sourcemap --target='chrome58,firefox57,safari11,edge16' --outfile=game.js --watch",
-            "type": "shell",
-            "isBackground": true,
-            "problemMatcher": [
-                "$tsc"
-            ],
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            }
-        }
-    ]
+  "version": "2.0.0",
+  "tasks": [
+    {
+      "label": "esbuild",
+      "command": "esbuild .\\src\\scripts\\game.ts --bundle --minify --sourcemap --target='chrome58,firefox57,safari11,edge16' --outfile=game.js --watch",
+      "type": "shell",
+      "isBackground": true,
+      "problemMatcher": ["$tsc"],
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      }
+    }
+  ]
 }
